revno: 16557 message:   Login page, css fix for overflow
committer: Lars Helge Overland <larshelge@gmail.com>
branch nick: dhis2
timestamp: Fri 2014-08-29 08:17:57 +0200

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/login.css
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/login.css
@@ -3,7 +3,6 @@
 {
   font-family: LiberationSans, sans-serif;
   line-height: 125%;
-  overflow: hidden;
 }
 
 html,body
@@ -71,7 +70,7 @@ a:hover
 #loginField
 {
   position: relative;
-  margin: 120px auto 0 auto;
+  margin: 128px auto 0 auto;
   width: 270px;
 }
 
